--- a/css/style2.css
+++ b/css/style2.css
@@ -3,7 +3,7 @@
 
 * {margin: 0; padding: 0;}
 body {
-	background-image: url(images/bg.jpg);
+	background-image: url(../images/bg.jpg);
 	font-family: arial, helvetica, sans-serif;
 	color: #666;
 }
