--- a/include/gallery.html
+++ b/include/gallery.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<title>Winner</title>
-	<link rel="stylesheet" type="text/css" href="style2.css">
-	<link rel="stylesheet" type="text/css" href="jquery.lightbox-0.5.css">
+	<link rel="stylesheet" type="text/css" href="../css/style2.css">
+	<link rel="stylesheet" type="text/css" href="../css/jquery.lightbox-0.5.css">
 
-	<script type="text/javascript" src="js/jquery.js"></script>
-	<script type="text/javascript" src="js/jquery.innerfade.js"></script>
-	<script type="text/javascript" src="js/jquery.lightbox-0.5.js"></script>
+	<script type="text/javascript" src="../js/jquery.js"></script>
+	<script type="text/javascript" src="../js/jquery.innerfade.js"></script>
+	<script type="text/javascript" src="../js/jquery.lightbox-0.5.js"></script>
 
 	<script type="text/javascript">
 		$ (document).ready(
@@ -32,7 +32,7 @@
 
 		<div id="header">
 			<div id="headerLeft">
-				<img src="images/logo.png">		
+				<img src="../images/logo.png">		
 			</div><!--End of headerLeft-->
 		
 			<div id="headerRight">
@@ -56,10 +56,10 @@
 		<div id="menu">
 
 			<ul>
-				<li class="white borderRadiusLeft"><a href="index2.html">Home</a></li>
+				<li class="white borderRadiusLeft"><a href="../index2.html">Home</a></li>
 				<li><a href="#">Blogs</a></li>
 				<li><a href="#">News</a></li>
-				<li><a href="gallery.html">Gallery</a></li>
+				<li><a href="include/gallery.html">Gallery</a></li>
 				<li class="borderRadiusRight"><a href="#">Contact Us</a></li>
 			</ul>
 
@@ -68,16 +68,16 @@
 		<div id="content">
 			<div id="slider">
 				<div>
-					<img src="images/slider1.jpg" class="sliderBorder">
+					<img src="../images/slider1.jpg" class="sliderBorder">
 				</div>
 				<div>
-					<img src="images/slider2.jpg" class="sliderBorder">
+					<img src="../images/slider2.jpg" class="sliderBorder">
 				</div>
 				<div>
-					<img src="images/slider3.jpg" class="sliderBorder">
+					<img src="../images/slider3.jpg" class="sliderBorder">
 				</div>
 			</div><!--End of slider-->
-			<img src="images/sliderbox_bg.png" class="shadow">
+			<img src="../images/sliderbox_bg.png" class="shadow">
 			<div id="search">
 				<form>
 					<input type="text" id="searchbox">
@@ -89,33 +89,33 @@
 			<div id="gallery">
 				<ul>
 					<li>
-						<a href="gallery/1.jpg">
-							<img src="gallery/1_thumb.jpg" width="120" height="160">
+						<a href="../gallery/1.jpg">
+							<img src="../gallery/1_thumb.jpg" width="120" height="160">
 						</a>
 					</li>
 					<li>
-						<a href="gallery/2.jpg">
-							<img src="gallery/2_thumb.jpg" width="120" height="160">
+						<a href="../gallery/2.jpg">
+							<img src="../gallery/2_thumb.jpg" width="120" height="160">
 						</a>
 					</li>
 					<li>
-						<a href="gallery/3.jpg">
-							<img src="gallery/3_thumb.jpg" width="120" height="160">
+						<a href="../gallery/3.jpg">
+							<img src="../gallery/3_thumb.jpg" width="120" height="160">
 						</a>
 					</li>
 					<li>
-						<a href="gallery/4.jpg">
-							<img src="gallery/4_thumb.jpg" width="120" height="160">
+						<a href="../gallery/4.jpg">
+							<img src="../gallery/4_thumb.jpg" width="120" height="160">
 						</a>
 					</li>
 					<li>
-						<a href="gallery/5.jpg">
-							<img src="gallery/5_thumb.jpg" width="120" height="160">
+						<a href="../gallery/5.jpg">
+							<img src="../gallery/5_thumb.jpg" width="120" height="160">
 						</a>
 					</li>
 					<li>
-						<a href="gallery/6.jpg">
-							<img src="gallery/6_thumb.jpg" width="120" height="160">
+						<a href="../gallery/6.jpg">
+							<img src="../gallery/6_thumb.jpg" width="120" height="160">
 						</a>
 					</li>
 				</ul>
